--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background: #000; 
+  background: #000;
   color: #000;
   /*font-family: 'Source Sans Pro', sans-serif;*/
   font-family: 'Montserrat', sans-serif;
@@ -15,21 +15,26 @@ body {
   line-height: 1.75em;
 }
 
+body {
+    width: 640px;
+    height: 451px;
+}
+
 
 body {
   background: #fff;
   overflow: hidden;
   position: absolute;
-  width: 100%;
-  height: 100%;
+  /*width: 100%;
+  height: 100%;*/
 }
 
-video { 
+video {
 /*  position: fixed;
   /*-webkit-transform: translateX(-50%) translateY(-50%);*/
   top: 0;
   z-index: -100;
-  left: 0; 
+  left: 0;
   min-height: 104%;
   min-width: 100%;
   position: absolute;
@@ -54,7 +59,7 @@ video {
   }
 }
 
-.stopfade { 
+.stopfade {
  opacity: .5;
 }
 
