--- a/public/css/style.css
+++ b/public/css/style.css
@@ -159,3 +159,11 @@ div.buttons {
   text-decoration:none;
   font-family: 'Montserrat', sans-serif;
 }
+
+/*new styles*/
+
+/*style to add when you click on the eraser*/
+
+.eraserClick {
+   cursor: url('http://www.gravatar.com/avatar/06ededb95f1c0b1f4f9d987e06d7d82b?s=32&d=identicon&r=PG'), pointer;            
+}
