Implemented firepad io

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,4 +162,11 @@ div.buttons {
   border-radius: 100px;
 }
 */
+.sample-show-hide {
+  -webkit-transition:all linear 0.5s;
+  transition:all linear 0.5s;
+}
 
+.sample-show-hide.ng-hide {
+  opacity:0;
+}
