--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,11 +8,25 @@ body {
   padding: 0;
   background: #000;
   color: #000;
-  /*font-family: 'Source Sans Pro', sans-serif;*/
   font-family: 'Montserrat', sans-serif;
   font-size: 15pt;
   letter-spacing: -0.025em;
   line-height: 1.75em;
+}
+
+.nav-board-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-board-input {
+  flex-basis: 75%;
+}
+
+.nav-board-btn {
+  flex-basis: 25%;
 }
 
 .slate {
